[gd_scene load_steps=8 format=3 uid="uid://dxrgbp47fc0mb"]

[ext_resource type="Texture2D" uid="uid://cklyrvm6hqsc1" path="res://key.png" id="1_2xwlv"]
[ext_resource type="Script" uid="uid://w67l0wy50pmr" path="res://item_find.gd" id="1_8im5x"]
[ext_resource type="PackedScene" uid="uid://dksxio8urut5u" path="res://movable_item.tscn" id="1_sjqbr"]
[ext_resource type="Script" uid="uid://c1d6c21hm37vy" path="res://timer.gd" id="3_8ocao"]
[ext_resource type="PackedScene" uid="uid://bky1kmfrdqcb1" path="res://countdown.tscn" id="3_vvkt6"]

[sub_resource type="LabelSettings" id="LabelSettings_8im5x"]
font_size = 50

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8im5x"]
size = Vector2(120.558, 90.4186)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8im5x")

[node name="table" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.394818, 0.151071, 0.0812884, 1)

[node name="Node2D2" parent="." instance=ExtResource("3_vvkt6")]
position = Vector2(576, 256)
scale = Vector2(0.398148, 0.398148)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="timer" type="Label" parent="."]
offset_left = 576.0
offset_top = 168.0
offset_right = 616.0
offset_bottom = 191.0
script = ExtResource("3_8ocao")

[node name="win_lose" type="Label" parent="."]
offset_left = 512.0
offset_top = 64.0
offset_right = 604.0
offset_bottom = 133.0
label_settings = SubResource("LabelSettings_8im5x")
horizontal_alignment = 1

[node name="Node2D" type="Node2D" parent="."]

[node name="Key" type="Sprite2D" parent="Node2D"]
position = Vector2(353.329, 386.5)
scale = Vector2(0.398148, 0.398148)
texture = ExtResource("1_2xwlv")

[node name="Area2D" type="Area2D" parent="Node2D/Key"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Key/Area2D"]
position = Vector2(-3.33722, -1.2558)
shape = SubResource("RectangleShape2D_8im5x")

[node name="Node2D" parent="Node2D/Key" instance=ExtResource("3_vvkt6")]
position = Vector2(-23.4302, -66.5582)

[node name="moveable4" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 376.0
offset_top = 64.0
offset_right = 440.0
offset_bottom = 128.0

[node name="moveable6" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 776.0
offset_top = 528.0
offset_right = 840.0
offset_bottom = 592.0

[node name="moveable7" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 512.0
offset_top = 512.0
offset_right = 576.0
offset_bottom = 576.0

[node name="moveable8" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 928.0
offset_top = 376.0
offset_right = 992.0
offset_bottom = 440.0

[node name="moveable9" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 792.0
offset_top = 168.0
offset_right = 856.0
offset_bottom = 232.0

[node name="moveable10" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 1024.0
offset_top = 176.0
offset_right = 1088.0
offset_bottom = 240.0

[node name="moveable11" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 1112.0
offset_top = 512.0
offset_right = 1176.0
offset_bottom = 576.0

[node name="moveable12" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 1112.0
offset_top = 512.0
offset_right = 1176.0
offset_bottom = 576.0

[node name="moveable3" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 160.0
offset_top = 216.0
offset_right = 224.0
offset_bottom = 280.0

[node name="moveable2" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 112.0
offset_top = 424.0
offset_right = 176.0
offset_bottom = 488.0

[node name="moveable5" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 320.0
offset_top = 352.0
offset_right = 384.0
offset_bottom = 416.0

[node name="moveable" parent="Node2D" instance=ExtResource("1_sjqbr")]
offset_left = 104.0
offset_top = 72.0
offset_right = 168.0
offset_bottom = 136.0

[node name="exit" type="Timer" parent="."]
wait_time = 3.0

[connection signal="finished" from="Node2D2" to="." method="_on_node_2d_2_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_exited" from="Node2D/Key/Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="timeout" from="exit" to="." method="_on_exit_timeout"]
